--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ body {
     background-image: radial-gradient(circle, rgba(20,0,20,1) 0%, rgba(10,10,40,1) 50%, rgba(20,0,20,1) 100%);;
 
     text-align: right;
+
+    min-height: 200px;
 }
 
 .container-logo {
@@ -17,6 +19,7 @@ body {
 }
 
 .logo {
+    transition: 300ms;
     width: 120px;
     margin: 20px 40px 10px 20px;
 }
@@ -59,6 +62,8 @@ body {
 }
 
 .btn {
+    transition: 200ms;
+    
     background-color: darkslategrey;
     display: inline-block;
     font-size: 1.1em;
