--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Spectral&display=swap');
 
-body {
-    background-image: linear-gradient(180deg, rgb(24, 93, 104) 0%, rgba(40, 11, 77, 1) 100%);
+header {
+    background-image: radial-gradient(circle, rgba(20,0,20,1) 0%, rgba(10,10,40,1) 50%, rgba(20,0,20,1) 100%);;
+    text-align: right;
+    min-height: 200px;
 }
 
-/*Cabeçalho*/
-.header {
-    background-image: radial-gradient(circle, rgba(20,0,20,1) 0%, rgba(10,10,40,1) 50%, rgba(20,0,20,1) 100%);;
-
-    text-align: right;
-
-    min-height: 200px;
+body {
+    background-image: linear-gradient(180deg, rgb(24, 93, 104) 0%, rgba(40, 11, 77, 1) 100%);
 }
 
 .container-logo {
@@ -20,13 +17,13 @@ body {
 
 .logo {
     transition: 300ms;
-    width: 120px;
+    width: 180px;
     margin: 20px 40px 10px 20px;
 }
 
 .logo:hover {
     transition: 300ms;
-    width: 130px;
+    width: 200px;
     margin-right: 60px;
     cursor: pointer;
 }
@@ -62,21 +59,21 @@ body {
 }
 
 .btn {
-    transition: 200ms;
-    
+    transition: 300ms;
+
     background-color: darkslategrey;
     display: inline-block;
-    font-size: 1.1em;
+    font-size: 1.5em;
     padding: 10px 20px;
-    border: 3px double rgb(230, 255, 130);
+    border: 3px double rgb(123, 240, 200);
     margin: 12px 3%;
     margin-bottom: 40px;
-    
 }
 
 .btn:hover {
-    transition: 200ms;
-    background-color: rgb(37, 63, 63);
+    transition: 300ms;
+    color: rgb(37, 63, 63);
+    background-color: rgb(250, 255, 180);
     cursor: pointer;
 }
 
@@ -89,13 +86,22 @@ p {
     margin-top: 1.3em;
 }
 
-.image-to-left {
-    width: 30%;
-    margin: 2em 2%;
+footer {
+    min-height: 100px;
+    background-image: linear-gradient(90deg, rgba(10,30,60,1) 0%, rgba(30,20,40,1) 100%);
+    text-align: center;
 }
 
-#txt-img-1 {
+.text-footer {
     display: inline-block;
-    width: 50%;
-    margin: 1em 3%;
+    font-style: italic;
+    font-size: 1.1em;
+
+    margin-top: 20px;
+    padding: 12px;
+
+    border-bottom: 4px groove rgba(20,0,20,1);
+    border-right: 4px groove rgba(20,0,20,1);
+    border-radius: 20px;
+
 }
