--- a/css/style-contato.css
+++ b/css/style-contato.css
@@ -1,4 +1,24 @@
 .ul-contatos {
     display: inline-block;
-    width: 80%;
+    width: 50%;
+    margin-left: 2%;
+    text-align: center;
+}
+
+.contato {
+    width: 100%;
+    display: inline-block;
+    background-color: rgba(255, 100, 255, 0.1);
+    font-size: 1.1em;
+    padding: 10px 20px;
+    border: 3px groove rgb(20, 20, 20);
+    margin: 15px;
+
+    transition: 600m;
+}
+
+.contato:hover {
+    background-color: rgba(200, 100, 200, 0.1);
+    transition: 300ms;
+    transform: translate(10px, 10px)
 }
